ConcurrentMap
added concurrentMap to collect data from file and To reduce continuous file reading operations